--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -48,6 +48,7 @@ a {
   box-shadow: 3px 3px 5px rgb(0 0 0 / 0.4);
 
   header {
+    z-index: 10001;
     position: sticky;
     top: 0;
     background-color: var(--main-pane-color);
